--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "3.2.0"
   },
   "dependencies": {
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
